Added Font License
Added Overpass Mono License and disclaimer for the airlock web app.

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,9 @@
         "wasm_exec.js"
       ]
     },
-    "root": true
+    "root": true,
+    "scripts": {
+      "generate-disclaimer": "./scripts/disclaimer.sh"
+    }
   }
 }
