Updated OverpassMono License
Updated the OFL.txt, removed the disclaimer.sh file, removed the declaration of the script in package.json.

--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,6 @@
         "wasm_exec.js"
       ]
     },
-    "root": true,
-    "scripts": {
-      "generate-disclaimer": "./scripts/disclaimer.sh"
-    }
+    "root": true
   }
 }
